# hornbeam

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  abcoredeps.h  abfileutils.c  abfileutils.h  main.c  utils.c  utils.h
src/: FileEmbedding.h  MongeElkanEmbedding.cc  MongeElkanEmbedding.h  Note.cc  Note.h  NoteEmbeddingModel.cc  NoteEmbeddingModel.h  VaultReader.cc  VaultReader.h  core.h  main.cc
